// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header/> renders with children 1`] = `
<header
  class=" header"
>
  <a
    class="header__title"
    href="/"
  >
    <h1>
      Hello world
    </h1>
  </a>
  <nav>
    <a
      href="#1"
    >
      Link 1
    </a>
    <a
      href="#2"
    >
      Link 2
    </a>
  </nav>
</header>
`;

exports[`<Header/> renders without children 1`] = `
<header
  class=" header"
>
  <a
    class="header__title"
    href="/"
  >
    <h1>
      Hello world
    </h1>
  </a>
</header>
`;
